--- a/.github/workflows/QualityCheck.yml
+++ b/.github/workflows/QualityCheck.yml
@@ -38,11 +38,11 @@ jobs:
     #     path: repo
     #     persist-credentials: true
 
-    # - name: Remove "Internal-" prefix
-    #   run: |
-    #     REPO_NAME="${{ github.event.repository.name }}"
-    #     REPO_NAME_WITHOUT_PREFIX="${REPO_NAME#Internal-}"
-    #     echo "REPO_NAME_WITHOUT_PREFIX=$REPO_NAME_WITHOUT_PREFIX" >> $GITHUB_ENV
+    - name: Remove "Internal-" prefix
+      run: |
+        REPO_NAME="${{ github.event.repository.name }}"
+        REPO_NAME_WITHOUT_PREFIX="${REPO_NAME#Internal-}"
+        echo "REPO_NAME_WITHOUT_PREFIX=$REPO_NAME_WITHOUT_PREFIX" >> $GITHUB_ENV
 
     # - name: Set variables in files
     #   id: SetOutputStrings
