--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,11 +62,11 @@ jobs:
     #     path: repo
     #     persist-credentials: true
 
-    # - name: Remove "Internal-" prefix
-    #   run: |
-    #     REPO_NAME="${{ github.event.repository.name }}"
-    #     REPO_NAME_WITHOUT_PREFIX="${REPO_NAME#Internal-}"
-    #     echo "REPO_NAME_WITHOUT_PREFIX=$REPO_NAME_WITHOUT_PREFIX" >> $GITHUB_ENV
+    - name: Remove "Internal-" prefix
+      run: |
+        REPO_NAME="${{ github.event.repository.name }}"
+        REPO_NAME_WITHOUT_PREFIX="${REPO_NAME#Internal-}"
+        echo "REPO_NAME_WITHOUT_PREFIX=$REPO_NAME_WITHOUT_PREFIX" >> $GITHUB_ENV
 
     # Get the version of the GitHub release for use later. This is only valid
     # when run in a release context
