--- a/.github/workflows/QualityCheck.yml
+++ b/.github/workflows/QualityCheck.yml
@@ -92,7 +92,7 @@ jobs:
 
     - name: Check for ERC test failures
       run: |
-        echo ERC-results.log
+        cat ERC-results.log
         if grep -q "FAILED" ERC-results.log; then
           echo "Tests failed"
           exit 1
@@ -100,7 +100,7 @@ jobs:
 
     - name: Check for DRC test failures
       run: |
-        echo DRC-results.log
+        cat DRC-results.log
         if grep -q "FAILED" DRC-results.log; then
           echo "Tests failed"
           exit 1
